# llm-council

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  start.ps1  start.sh
backend/: config.py  council.py  llm_client.py  main.py  storage.py
backend/static/: app.js  style.css
backend/templates/: base.html  conversation.html  index.html
backend/templates/partials/: sidebar.html  stage1.html  stage2.html  stage3.html
frontend/: package-lock.json
frontend/src/: App.jsx  api.js  utils.js
frontend/src/components/: ChatInterface.css  ChatInterface.jsx  Sidebar.css  Sidebar.jsx  Stage1.jsx  Stage2.jsx  Stage3.jsx
