[project]
name = "llm-council"
version = "0.1.0"
description = "Your LLM Council"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-dotenv",
    "httpx",
    "pydantic",
    "jinja2",
    "mistune",
    "ruff>=0.15.15",
]

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # simplify
    "C4",  # flake8-comprehensions
    "W",   # pycodestyle warnings
]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
